--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -23,6 +23,6 @@ services:
     image: ilyak475/kittygram_gateway
     env_file: .env
     ports:
-      - 9000:80
+      - '${EXTERNAL_PORT}:80'
     volumes:
       - static_kittygram:/staticfiles/
