--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-POSTGRES_DB=kittygram
-POSTGRES_USER=kittygram_user
-POSTGRES_PASSWORD=kittygram_password
-DB_NAME=kittygram
+POSTGRES_DB=django
+POSTGRES_USER=django_user
+POSTGRES_PASSWORD=django_password
+DB_HOST=django_db
+DB_PORT=5432
+EXTERNAL_PORT=8000
+SEVCRET_KEY='your_secret_key'
+DEBUG=True
+ALLOWED_HOSTS=['localhost', '127.0.0.1']
