--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,4 @@ DB_PORT=5432
 EXTERNAL_PORT=8000
 SEVCRET_KEY='your_secret_key'
 DEBUG=True
-ALLOWED_HOSTS=['localhost', '127.0.0.1']
+ALLOWED_HOSTS='localhost, 127.0.0.1'
