--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -26,3 +26,5 @@ services:
       - '${EXTERNAL_PORT}:80'
     volumes:
       - static_kittygram:/staticfiles/
+    environment:
+      - EXTERNAL_PORT=${EXTERNAL_PORT}
