--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -22,9 +22,9 @@ services:
   gateway:
     image: ilyak475/kittygram_gateway
     env_file: .env
-    ports:
-      - '${EXTERNAL_PORT}:80'
     volumes:
       - static_kittygram:/staticfiles/
+    ports:
+      - "${EXTERNAL_PORT}:80"
     environment:
       - EXTERNAL_PORT=${EXTERNAL_PORT}
