--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
+    client_max_body_size 10M;
+
     location /media/ {
         alias /staticfiles/media/;
         expires 30d;
